examples/errors/part2_semantic1_attribution_invalid.lya
dcl a int;
a = "ae"; //não ok